Fixes weird side scrolling on small screens

--- a/assets/css/base.scss
+++ b/assets/css/base.scss
@@ -4,7 +4,7 @@
 
 @layer base {
   html, body {
-    @apply min-h-screen;
+    @apply min-h-screen overflow-x-hidden;
   }
 
   body {
